# ProjectEldrun

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  DOCUMENTATION.md  Eldrun-Tauri.app.desktop  Eldrun.app.desktop  Eldrun.desktop  EldrunHotReload.desktop  Features.md  GEMINI.md  ISSUES.md  LICENSE  LICENSE-APACHE  PLAN.md  PLAN_BACKEND_BOUNDARIES.md  PLAN_MACOS.md  PLAN_OLLAMA.md  PLAN_OPEN_IDEAS.md  PLAN_WINDOWS.md  README.md  ROADMAP.md  STATUS.md  TODO.md  TODO_history.md  TauriRust.md  eldrun.desktop  index.html  open_ideas.md  package-lock.json  package.json  plan_0.md  plan_1.md  plan_kde.md  plan_vision.md  start-eldrun-tauri-hotreload.sh  start-eldrun-tauri.sh  start-eldrun.sh  tailwind.config.js  vite.config.ts  (+1 more)
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: ci-cd.yml
app/: ai_search.py  app_picker.py  default_apps_manager.py  downloads_manager.py  eldrun.py  global_apps_manager.py  import_project_dialog.py  launch_helpers.py  network_monitor.py  new_project_dialog.py  ollama_client.py  ollama_dialog.py  project_manager.py  project_stats.py  settings_manager.py  time_tracker.py  window.py  workspace_core.py  workspace_manager.py
app/backends/: __init__.py  cinnamon_x11.py  gnome.py  kde_kwin.py  null.py
app/panels/: bottom_panel.py  center_panel.py  left_panel.py  right_panel.py
docker/agent-sandbox/: Dockerfile  README.md
docs/: CODE_REVIEW.md  Eldrun.desktop  EldrunHotReload.desktop  Features.md  README.tex  REVIEW.md  SSH_CHANGES.md  VISION.md  deck_presenter_plan.md  docker_projects_plan.md  git_lockstep_case_matrix.md  git_lockstep_hardening_plan.md  git_lockstep_live_qa.md  group_k_plan.md  group_l_42_detach_plan.md  group_l_42_detach_plan_review.md  group_l_42_detach_review_code.md  group_l_plan.md  hpc_workspace_plan.md  i18n_translation_plan.md  light_lavender_theme.md  mountfree_remote_plan.md  multi_host_remote_plan.md  open_ideas.md  project_boxes_plan.md  project_boxes_plan_review.md  resume_sessions_plan.md  split_subwindows_plan.md  ssh_projects_plan.md  ssh_sync_plan.md  start-eldrun-tauri-hotreload.sh  tmux_remote_plan.md
docs/context/: agent_authority.md  agent_sessions.md  docker_containers.md  git_sync.md  hpc_careful_mode.md  multi_host_remote.md  openvpn.md  remote_autoconnect.md  remote_credentials.md  remote_projects.md  tmux_sessions.md  usage_stats.md
scripts/: bump-version.sh  eldrun-dev.cmd  package-local.sh  privacy-check.sh  take-screenshot.sh
src/: App.tsx  CLAUDE.md  crashReporter.ts  main.tsx  test-setup.ts
src-tauri/: CLAUDE.md  Cargo.toml  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: lockstep_drv.rs
src-tauri/icons/: icon.icns
src-tauri/src/: duscan.rs  gpustat.rs  lib.rs  main.rs  paths.rs  storage.rs  sysstat.rs
src-tauri/src/commands/: agents.rs  apps.rs  boxes.rs  calendar.rs  clipboard.rs  crash.rs  credentials.rs  debug.rs  default_apps.rs  disk_usage.rs  downloads.rs  format.rs  fs.rs  fs_watch.rs  git.rs  git_fork.rs  git_hosting.rs  git_peer.rs  git_publish.rs  github.rs  global_machines.rs  hpc_ws.rs  local_loss.rs  mod.rs  monitor.rs  net_usage.rs  network.rs  ollama.rs  openvpn.rs  pdf_clip.rs  power.rs  presenter.rs  project_runtime.rs  projects.rs  python.rs  remote.rs  screenshot.rs  search.rs  settings.rs  sheets.rs  (+10 more)
src-tauri/src/platform/: macos.rs  macos_park.rs  mod.rs  null.rs  wayland_kde.rs  windows.rs  windows_park.rs  x11.rs
src-tauri/src/schema/: active_session.rs  boxes.rs  calendar.rs  default_apps.rs  global_machine.rs  mod.rs  net_usage.rs  project.rs  projects.rs  session.rs  settings.rs  time_log.rs  usage_stats.rs
src-tauri/src/services/: agent_session.rs  big_folders.rs  codex_bind.rs  download_routing.rs  git_credentials.rs  git_peer.rs  hpc_mode.rs  local_loss.rs  mod.rs  net_usage.rs  openvpn.rs  project_runtime.rs  remote.rs  remote_agents.rs  remote_credentials.rs  remote_sync.rs  remote_usage.rs  restore_service.rs  sandbox.rs  sftp.rs  ssh_common.rs  ssh_exec.rs  ssh_mount.rs  sync_auto.rs  terminal_service.rs  tmux_local.rs  usage_stats.rs  window_service.rs  window_state.rs  worker_sync.rs
src-tauri/src/terminal/: mod.rs
src-tauri/tests/: embed_capability_tests.rs  file_ops_tests.rs  no_foreign_config_writes.rs  projects_commands.rs  schema_edge_cases.rs  schema_roundtrip.rs  services_tests.rs
src/__tests__/: AgentMode.test.ts  AgentModeBadge.test.tsx  Alarms.test.ts  AppShellClose.test.tsx  AutoReload.test.tsx  Autocomplete.test.tsx  BottomBarContextMenu.test.tsx  BoxAssignment.test.ts  BoxRendering.test.tsx  BoxSearch.test.tsx  CalendarTime.test.ts  CarefulHost.test.ts  CenterPanelSessionRestore.test.tsx  CloneImport.test.ts  CloseAllTabs.test.ts  CloseGroup.test.ts  CodexHooksTab.test.ts  Coords.test.ts  CredentialPaste.test.tsx  CrossSubwindowTabDrag.test.ts  CustomAgents.test.ts  DecideDetachedDrop.test.ts  DeckExport.test.ts  DeckModel.test.ts  DeckPresent.test.ts  DeckSidecar.test.ts  DeckSnap.test.ts  DeckTemplate.test.ts  DeckTexPanel.test.ts  DeckTransform.test.ts  (+159 more)
test-fixtures/: active_session.json  default_apps.json  eldrun_filetab_session.json  eldrun_layout_session.json  eldrun_state.json  eldrun_terminal_session.json  eldrun_window_session.json  project.json  projects.json  settings.json  time_log.json
tests/: test_ai_search.py  test_app_picker.py  test_bottom_panel_logic.py  test_center_panel_logic.py  test_default_apps_manager.py  test_downloads_manager.py  test_eldrun_theme_logic.py  test_global_apps_manager.py  test_kde_kwin.py  test_launch_helpers.py  test_network_monitor.py  test_ollama_client.py  test_open_apps_manager.py  test_project_manager.py  test_remote_repo.py  test_right_panel_logic.py  test_settings_manager.py  test_time_tracker.py  test_window_layout_logic.py  test_workspace_core.py  test_workspace_manager.py
todo/: done.md  group-a.md  group-c.md  group-e.md  group-f.md  group-g.md  group-h.md  group-i.md  group-j.md  group-l.md  group-m.md  group-n.md  group-o.md  group-p.md  group-r.md  group-s.md  group-t.md
(+290 files in other folders)
