[package]
name = "eldrun"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "eldrun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "eldrun"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Native OS drag-OUT of files (Windows OLE / macOS NSDraggingSession / Linux GTK).
# WebKitGTK's HTML5 drag-out won't render a drag image or reliably export files
# to other apps, so the Ctrl-drag file export goes through this plugin instead.
tauri-plugin-drag = "2"
# Encode the drag-preview PNG as a base64 data URL for tauri-plugin-drag's icon
# field (it only accepts `data:image/png;base64,…`, not a file path).
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
portable-pty = "0.9.0"
tokio = { version = "1.52.3", features = ["full"] }
mime_guess = "2.0.5"
infer = "0.19.0"
opener = "0.8.4"
notify = "8"
# Read images (e.g. screenshots) off the system clipboard for paste-into-tree.
arboard = "3"
# Encode the clipboard's raw RGBA image as PNG before writing it to disk.
png = "0.17"
calamine = "0.35.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
# Stage host file bytes on disk so `git diff --no-index` can diff the local mirror
# against the current host copy (SSH-sync host-vs-mirror diff button).
tempfile = "3"
# Extract dropped/double-clicked .zip archives in place (deflate covers the vast
# majority of real-world zips; "stored" entries need no feature).
zip = { version = "2", default-features = false, features = ["deflate"] }
# Store git-hosting access tokens in the OS credential store (Windows Credential
# Manager / macOS Keychain / Linux Secret Service) instead of plaintext on disk.
# The backend deps are target-gated inside the crate, so enabling all three
# native backends is the standard cross-platform recipe.
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service", "crypto-rust"] }
# Native SFTP client for the remote folder browser (TODO #80): drives the SFTP
# subsystem over a child `ssh -s sftp` process, so browsing parses no `ls` text
# and never feeds a remote `$SHELL -c` (replaces the injection-prone `ssh ls`
# path). The project mount/exec paths are unchanged — still sshfs / `ssh -tt`.
openssh-sftp-client = "0.15.7"
# `StreamExt::next` to drive the SFTP `ReadDir` stream (already in the dep tree).
futures-util = "0.3"
# `BytesMut` buffer type for chunked SFTP reads (git-lockstep streaming transport,
# #28n Phase 3); matches the `bytes` version openssh-sftp-client already resolves.
bytes = "1"

# Linux/Unix: workspace backends + crash signal handling
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4"
xcb = { version = "1", features = ["randr"] }
# Same crate/version wry uses; needed to hook web-process-terminated on the
# raw WebKitWebView for the webview crash reporter.
webkit2gtk = { version = "=2.0.2", features = ["v2_40"] }
# GTK3 (the toolkit WebKitGTK 4.1 renders with). Used to inject an app-level CSS
# provider that recolors the native scrollbars WebKit draws inside the web
# content — the page's `scrollbar-color` is ignored on this WebKitGTK build.
# Same major version wry/webkit2gtk already pull in, so it adds nothing new.
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    # Native screen capture (BitBlt the virtual screen → PNG) in `screenshot.rs`.
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    # Per-process CPU/memory sampling + process-tree walk for the project resource
    # readout (the Windows analogue of Linux's `/proc` parsing in `sysstat.rs`).
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
